crux-mir/test/symb_eval/any/downcast_fail.good
test downcast_fail/<DISAMB>::crux_test[0]: FAILED

failures:

---- downcast_fail/<DISAMB>::crux_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/any/downcast_fail.rs:10:14: 10:15: error: in downcast_fail/<DISAMB>::crux_test[0]
[Crux]   failed to downcast Any as BVRepr 32

[Crux] Overall status: Invalid.
